--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,9 @@ jobs:
     script:
       - npm run build
     deploy:
-      provider: pages
+      provider: pages:git
       fqdn: suisiann.ithuan.tw
+      edge: false
       skip_cleanup: true
       local_dir: build/
       github_token: ${GITHUB_TOKEN}
