--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ node_js:
 branches:
   only:
   - main
-  - siu-cd
 jobs:
   include:
   - name: "check"
@@ -22,4 +21,4 @@ jobs:
       local_dir: build/
       github_token: ${GITHUB_TOKEN}
       on:
-        branch: siu-cd
+        branch: main
